<resources>
    <string name="app_name">OnStore</string>

    <string name="acerca_de">Acerca De</string>
    <string name="store">Tienda</string>
    <string name="social">Redes Sociales</string>
    <string name="contact">Contacto</string>

    <string name="category">Categorías</string>
    <string name="addCategory">Agregar Categoría</string>

    <string name="computers">Computadoras</string>
    <string name="cars">Automotriz</string>
    <string name="care">Cuidado Personal</string>
    <string name="electronic">Electrónica</string>
    <string name="games">Videojuegos</string>
    <string name="health">Salud y Hogar</string>
    <string name="kids">Bebé</string>
    <string name="sports">Deportes y aire libre</string>

    <string name="aggProduct">Agregar Producto</string>

    <string name="info">Info</string>
    <string name="buys">Compras</string>
    <string name="sociales">Redes Sociales</string>
    <string name="contacto">Contacto</string>
    <string name="todo">TODO</string>


    <string name="imgFacebook">Facebook</string>
    <string name="imgInstragram">Instagram</string>
    <string name="imgTwitter">Twitter</string>
    <string name="acercade">OnStore, una de las empresas virtuales más innovadoras del momento en Honduras. La compañía, con sede en Siguatepeque, Comayagua pretende ser un líder local en el comercio electrónico. Desde que se vio la necesidad de tienda virtual donde personas particulares ofrecieran sus productos, se ha hecho un progreso significativo en la oferta, en los sitios web y servicio al cliente. En la actualidad, OnStore ofrece gran variedad de productos, desde libros o productos electrónicos.</string>
    <string name="automotriz">Categoria Automotriz</string>
    <string name="Bebes">Categoria Bebes</string>
    <string name="Computadoras">Categoria Computadoras</string>
    <string name="Cuidado">Categoria Cuidado</string>
    <string name="Deportes">Categoria Deportes</string>
    <string name="Electronica">Categoria Electronica</string>
    <string name="Salud">Categoria Salud</string>
    <string name="Videojuegos">Categoria Videojuegos</string>

    <string name="hintNombre">Nombre del producto</string>
    <string name="hintDescripcion">Descripción del producto</string>
    <string name="hintCategoria">Categoria</string>
    <string name="hintPrecio">Precio</string>
    <string name="hintCantidad">Cantidad en inventario</string>
    <string name="btnAgregarProducto">Agregar producto</string>

    <string name="hintIdCategoria">Id Categoría</string>

    <string name="hintNombreCategoria">Nombre de la categoría</string>
    <string name="hintDescripcionCategoria">Descripción de la categoría</string>
    <string name="btnAgregarCategoria">Agregar categoría</string>

    <string name="tituloDialogoLongClick">Elija una acción</string>
    <string name="mensajeDialogoLongClick">¿Qué desea realizar con el producto seleccionado?</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="mensajeCancelarDialogoLongClick">No se han realizado cambios en las tareas</string>
    <string name="mensajetareaEliminada">Producto eliminado satisfactoriamente</string>
    <string name="button">Button</string>
</resources>
