<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProducts">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etNombre" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:hint="@string/hintNombre"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etDescripcion" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:hint="@string/hintDescripcion"/>

    <Button
        android:text="@string/btnAgregarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAgregarTarea" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    <EditText
        android:id="@+id/etCantidad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescripcion"
        android:hint="@string/hintCantidad"/>

    <EditText
        android:id="@+id/etCategoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCantidad"
        android:hint="@string/hintCategoria"/>

    <EditText
        android:id="@+id/etPrecio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCategoria"
        android:hint="@string/hintPrecio"/>

</android.support.constraint.ConstraintLayout>