<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="269dp"
        android:layout_height="250dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        app:layout_constraintBottom_toTopOf="@+id/btnBuy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/btnInfo"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/boton_redondo"
        android:contentDescription="@string/info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/info" />

    <ImageButton
        android:id="@+id/btnBuy"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/boton_redondo"
        android:contentDescription="@string/buys"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnInfo"
        app:srcCompat="@drawable/buys" />

    <ImageButton
        android:id="@+id/btnSocial"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/boton_redondo"
        android:contentDescription="@string/sociales"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBuy"
        app:srcCompat="@drawable/facebook" />

    <ImageButton
        android:id="@+id/btnContact"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/boton_redondo"
        android:contentDescription="@string/contacto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSocial"
        app:srcCompat="@drawable/message" />




</android.support.constraint.ConstraintLayout>