<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCategory">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etNombreCategoria" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:hint="@string/hintNombreCategoria"/>

    <EditText
        android:id="@+id/etDescripcionCategoria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hintDescripcionCategoria"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreCategoria" />

    <Button
        android:text="@string/btnAgregarCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAgregarTarea" android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" style="@style/Widget.AppCompat.Button.Borderless.Colored"/>


</android.support.constraint.ConstraintLayout>